--- a/FlappyBird/index.html
+++ b/FlappyBird/index.html
@@ -7,14 +7,18 @@
     <link rel="stylesheet" href="styles.css">
     <script src="app.js" charset="UTF-8"></script>
 </head>
+<body>
+<div class="border-left"></div>
+<div class="border-right"></div>
 <div class = "game-container">
+    <div class="border-top"></div>
     <div class="sky">
         <div class = "bird"></div>
        
     </div>
     <div class="ground"></div>
 </div>
-<body>
+
     
 </body>
 </html>
